--- a/project2/cart.html
+++ b/project2/cart.html
@@ -48,7 +48,7 @@
             <div id="totalContainer">
                 <h3>Total Price: $<span id="totalAmount">0</span></h3>
             </div>
-            <button id="checkoutButton">Proceed to Checkout</button>
+            <a href="./order_product.html"><button id="checkoutButton">Proceed to Checkout</button></a>
         </div>
     </div>
     <footer>
