--- a/project2/index.html
+++ b/project2/index.html
@@ -61,9 +61,15 @@
                 <img src="./images/carousel/aqua_h.avif" alt="Image 1" class="active">
                 <img src="./images/carousel/black_h.avif" alt="Image 2">
                 <img src="./images/carousel/green_h.webp" alt="Image 3">
-                <img src="./images/carousel/orange_h.webp" alt="Image 4">
+                <img src="./images/carousel/pink_h.webp" alt="Image 4">
                 <img src="./images/carousel/purple_h.webp" alt="Image 5">
                 <img src="./images/carousel/white_h.webp" alt="Image 6">
+                <img src="./images/carousel/red_h.avif" alt="Image 7">
+                <img src="./images/carousel/blue_h.avif" alt="Image 8">
+                <img src="./images/carousel/magenta_h.webp" alt="Image 9">
+                <img src="./images/carousel/light_aqua_h.avif" alt="Image 10">
+                <img src="./images/carousel/light_green_h.webp" alt="Image 11">
+                <img src="./images/carousel/light_white.avif" alt="Image 12">
             </div>
         </div>
     </div>
