--- a/project2/products.html
+++ b/project2/products.html
@@ -29,13 +29,13 @@
             <ul class="navigation__home__ul">
                 <li><a href="./index.html" class="list1">HOME</a></li>
                 <li><a href="./about.html" class="list2">ABOUT US</a></li>
-                <li><a href="./products.html" class="list3">PRODUCTS</a></li>
+                <li><a href="#" class="list3">PRODUCTS</a></li>
                 <li>
                     <a href="#" class="list4"><img src="./icons/user.png" width="26" height="26" alt="User"></a>
                     <a href="#" class="list5">LOG IN</a>
                 </li>
                 <li>
-                    <a href="./cart.html"><img src="./icons/cart.png" alt="cart" width="32" height="32"></a>
+                    <a href="./cart.html" class="cart"><img src="./icons/cart.png" alt="cart" width="32" height="32"></a>
                 </li>
             </ul>
         </nav>
